testdata/language-features/basic-values/case04.reject.out
type error: can not unify
[32m'Tuple0[m
with
[32m'Char[m

in testdata/language-features/basic-values/case04.reject.lc:2:8:
  1 -> '1'
       ^^^
